[gd_scene load_steps=8 format=3 uid="uid://dv1rei6g4deat"]

[ext_resource type="Script" uid="uid://b5lf2kk08iuba" path="res://potion/maps/objects/recipe_pickup.gd" id="1_5hct3"]
[ext_resource type="Texture2D" uid="uid://b26o7ob7o2den" path="res://icon.svg" id="1_sxhbl"]
[ext_resource type="PackedScene" uid="uid://d3ltk63p7jwl7" path="res://assets/fantasy/glTF/Scroll_1.gltf" id="2_1tufr"]
[ext_resource type="Script" uid="uid://doue0c41rfpuw" path="res://potion/maps/objects/item_drop.gd" id="4_5fef5"]
[ext_resource type="AudioStream" uid="uid://colhp5fnehvl7" path="res://assets/sound/sfx/ハシボソガラスの鳴き声.mp3" id="5_8rh1x"]

[sub_resource type="SphereShape3D" id="SphereShape3D_fks2m"]
radius = 0.7726789

[sub_resource type="Curve3D" id="Curve3D_8rh1x"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -2.2458413, 7.2724075, 6.717159, 0, 0, 0, 0, 0, 0, 2.3616836, 6.425622, -7.354453),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[node name="RecipePickup" type="Area3D" node_paths=PackedStringArray("crow_path")]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_5hct3")
crow_path = NodePath("Path3D/PathFollow3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4058528, 0)
shape = SubResource("SphereShape3D_fks2m")

[node name="Root" type="Node3D" parent="."]

[node name="Sprite3D2" type="Sprite3D" parent="Root"]
transform = Transform3D(0.35355338, 0.17677669, -1.545431e-08, 0, -1.0927847e-08, -0.5, -0.35355338, 0.17677669, -1.545431e-08, 0, 0.07353139, 0)
modulate = Color(0, 0, 0, 1)
texture = ExtResource("1_sxhbl")

[node name="Visual" type="Node3D" parent="Root"]

[node name="Scroll_12" parent="Root/Visual" instance=ExtResource("2_1tufr")]
transform = Transform3D(2.1213202, 0, 2.1213202, 0, 3, 0, -2.1213202, 0, 2.1213202, 0, 0.25147676, 0)

[node name="SpawnDelay" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ItemDrop" type="Node" parent="." node_paths=PackedStringArray("visual")]
script = ExtResource("4_5fef5")
visual = NodePath("../Root/Visual")

[node name="CrowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8rh1x")
volume_db = -10.0
bus = &"SFX"

[node name="Path3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_8rh1x")

[node name="PathFollow3D" type="PathFollow3D" parent="Path3D"]
transform = Transform3D(0.9503466, 0.017766638, -0.31066725, 0, 0.99835044, 0.057095397, 0.31117588, -0.05426019, 0.9487932, -2.2458413, 7.2724075, 6.717159)

[node name="Crow" type="CSGBox3D" parent="Path3D/PathFollow3D"]
transform = Transform3D(1.0000007, -1.8626451e-09, 2.9802322e-08, -3.7252903e-09, 1, -7.4505806e-08, -5.9604645e-08, -3.7252903e-08, 1.0000006, 0, 0, 0)
size = Vector3(0.30639648, 0.16992188, 0.5908203)
